# ledger-app

./: compose.yaml
services/backend/: Dockerfile  pyproject.toml
services/backend/src/: main.py
services/backend/tests/: conftest.py  test_main.py
services/frontend/: package-lock.json  package.json
